# worthiq

./: .gitignore  DEPLOYMENT.md  QUICKSTART.md  README.md  package-lock.json  package.json  start_app.sh
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  nixpacks.toml  package-lock.json  package.json  railway.json  railway.toml
backend/prisma/: schema.prisma
backend/scripts/: wipe-all-data.cjs
backend/src/: app.controller.spec.ts  app.controller.ts  app.module.ts  main.ts
backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  email.service.ts  jwt.strategy.ts
backend/src/plaid/: plaid.controller.ts  plaid.module.ts  plaid.service.ts
backend/src/sage/: sage.controller.ts  sage.module.ts  sage.service.ts
backend/src/widgets/: widgets.controller.ts  (+2 more)
desktop/: README.md  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: MOBILE_WEB_SYNC.md
frontend/: .env.example  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json
frontend/.next/: BUILD_ID  app-path-routes-manifest.json  build-manifest.json  fallback-build-manifest.json  prerender-manifest.json  required-server-files.js  required-server-files.json  routes-manifest.json  trace  trace-build
frontend/public/: index.html  manifest.json  offline.html  sw.js
frontend/src/: App.tsx  index.css
mobile/: EAS-TESTFLIGHT.md  app.config.ts  app.json  eas.json  metro.config.js  package-lock.json  package.json
mobile/app/: _layout.tsx  index.tsx
mobile/src/: theme.ts
(+304 files in other folders)
