[package]
name = "worthiq-desktop"
version = "1.0.0"
description = "WorthIQ — Master Your Capital with AI"
authors = ["WorthIQ"]
license = "UNLICENSED"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "worthiq_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "worthiq-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
